# pyworld

./: .bumpversion.cfg  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  VERSION  build.sh  dalton.in  next_steps.md  project_setup.md  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
DALTON/Doc/: General.tex  Install.tex  Master.tex  Molecule.tex  New.tex  Sirius.tex  Starting.tex  cc.bib  ccexamples.tex  ccexci.tex  ccgeneral.tex  cclrsd.tex  dalton.bib  dft.bib  electricchap.tex  embedding.bib  embedding.tex
DALTON/abacus/: aba2eth.F  aba2r12.F  aba2tex.F  abaaat.F  abactocd.F  abadip.F  abadrv.F  abadtra.F  abaedrv.F  abaenr.F  abaesym.F  abaexc.F  abaflt.F  abafmm.F  abafsd.F  abalnr.F  abaloc.F  abalresc.F  abalrs.F  abaltra.F  abamag.F  abamolden.F  abander.F  abandsym.F  abanuc.F  abanvib.F  abaop2.F  abaopg.F  abaopt.F  (+61 more)
SPEC/: EVC.py  SUM.py  TVCORF.py
TRANSPORT/: ENGINE.py  TRANSPORT.py  __init__.py
basic/example_base/: CMakeLists.txt
cmake/: LibsPElib.cmake  TestsDALTON.cmake
doc/: index.rst
docs/: Makefile  appendix.rst  conf.py  index.rst  install.rst  introduction.rst  make.bat  requirements.txt  spec.rst  theory.rst  transport.rst
pyworld/: __init__.py  my_module.py
source/: data_processing.py  ed_builder.py  ef_builder.py  go.py  logger.py  model_trainer.py
tests/: test_my_module.py
(+731 files in other folders)
